# TFM_ciber

./: .gitignore  README.md  benchmarks.md
Dilithium/: CMakeLists.txt
Dilithium/main/: CMakeLists.txt  fips202.c  main.c  sign.c
Dilithium/main/include/: main.h
Dilithium/main/src/: randombytes.c  sign.c
ESP32/Dilithium/: CMakeLists.txt
ESP32/Dilithium/main/: CMakeLists.txt  main.c
ESP32/Dilithium/main/include/: config.h  main.h
ESP32/Dilithium/main/src/: fips202.c
ESP32/Kyber/main/: main.c
ESP32/Kyber/main/include/: main.h  params.h  randombytes.h
ESP32/Kyber/main/src/: indcpa.c  kem.c
Kyber/: CMakeLists.txt
Kyber/main/: CMakeLists.txt  main.c
Kyber/main/include/: main.h
Kyber/main/src/: indcpa.c  kem.c  randombytes.c
Memoria/Book/: book.acn  book.acr  book.alg  book.aux  book.bbl  book.bbl-SAVE-ERROR  book.bcf  book.blg  book.fdb_latexmk  book.fls  book.glsdefs  book.ist  book.loa  book.lof  book.lol  book.lot  book.out  book.run.xml  book.slg  book.tex  book.toc
Memoria/Book/abstract/: abstract.tex  resumen.tex
Memoria/Book/acknowledgements/: agradecimientos.tex
Memoria/Book/acronyms/: defacronymsgl.tex
Memoria/Book/appendix/: manual.tex
Memoria/Book/biblio/: biblio.bib
Memoria/Book/chapters/: conclusiones.tex  desarrollo.tex  diseño.tex  estudioTeorico.tex  introduccion.tex  resultados.tex
Memoria/Book/cover/: extralistings.tex
Memoria/Book/dedication/: dedicatoria.tex
Memoria/Book/presupuesto/: presupuesto.tex
Memoria/Config/: myconfig.tex  postamble.tex  preamble-solicitud.tex  preamble.tex
RP2040/HQC-128/: CMakeLists.txt  main.c
RP2040/HQC-128/include/: compat.h  main.h  randombytes.h
RP2040/HQC-128/src/: randombytes.c
RP2040/HQC-192/: CMakeLists.txt
RP2040/HQC-256/: CMakeLists.txt  main.c
RP2040/McEliece348864/: CMakeLists.txt  main.c
RP2040/Sphincs/: CMakeLists.txt  main.c
Results/: .results.py.swp  Dilithium3  HQC-128  Kyber2  Kyber3  Kyber4  Spincs-128f-haraka  results.py
Results/Dilithium/: Dilithium2  Dilithium5
Results/HQC/: HQC-128  HQC-192  HQC-256
Results/Kyber/: Kyber2  Kyber3  Kyber4
Results/Sphincs/Haraka/128/: Sphincs-haraka-128f-simple  Sphincs-haraka-128s-robust  Sphincs-haraka-128s-simple  Spincs-haraka-128s-robust
Results/Sphincs/Haraka/192/: Sphincs-haraka-192f-robust  Sphincs-haraka-192f-simple  Sphincs-haraka-192s-robust  Sphincs-haraka-192s-simple
Results/Sphincs/Haraka/256/: Sphincs-haraka-256s-robust  Sphincs-haraka-256s-simple  Spincs-haraka-256f-robust  Spincs-haraka-256f-simple
Results/Sphincs/Sha2/128/: Sphincs-sha2-128f-simple  Sphincs-sha2-128s-simple  Spincs-sha2-128f-robust  Spincs-sha2-128f-simple  Spincs-sha2-128s-robust
Results/Sphincs/Sha2/192/: Sphincs-sha2-192f-robust  Sphincs-sha2-192f-simple  Sphincs-sha2-192s-robust  Sphincs-sha2-192s-simple
Results/Sphincs/Sha2/256/: Sphincs-sha2-256f-robust  Sphincs-sha2-256f-simple  Sphincs-sha2-256s-robust  Sphincs-sha2-256s-simple
Results/Sphincs/Shake/128/: Sphincs-shake-128f-robust  Sphincs-shake-128f-simple  Sphincs-shake-128s-robust  Sphincs-shake-128s-simple
Results/Sphincs/Shake/192/: Sphincs-shake-192f-robust  Sphincs-shake-192f-simple  Sphincs-shake-192s-robust  Sphincs-shake-192s-simple
Results/Sphincs/Shake/256/: Sphincs-shake-256f-robust  Sphincs-shake-256f-simple  Sphincs-shake-256s-robust  Sphincs-shake-256s-simple
Results/benchmarks/hashing/crypto_kem/bikel1/m4f/: 20240821053018_0  20240821194920_0  20240822052958_0
Results/benchmarks/hashing/crypto_kem/bikel1/opt/: 20240821143852_0  20240823105623_0
Results/benchmarks/hashing/crypto_kem/bikel3/m4f/: 20240821215744_0  20240822021448_0  20240823094213_0
Results/benchmarks/hashing/crypto_kem/bikel3/opt/: 20240820235913_0  20240822182258_0  20240823073910_0
Results/benchmarks/hashing/crypto_kem/hqc-128/clean/: 20240821044236_0
Results/benchmarks/hashing/crypto_kem/hqc-192/clean/: 20240823110223_0
Results/benchmarks/hashing/crypto_kem/hqc-256/clean/: 20240821221515_0
Results/benchmarks/hashing/crypto_kem/kyber1024/clean/: 20240821000638_0  20240821013042_0  20240821023757_0  20240821033700_0  20240821043950_0  20240821054311_0  20240821065040_0  20240821075342_0  20240821085733_0  20240821095942_0  20240821111003_0  20240821122352_0  20240821133829_0  20240821144502_0  20240821155250_0  20240821170252_0  20240821181513_0  20240821200150_0  20240821210715_0  20240821221311_0  20240821231335_0  20240822002116_0  20240822012505_0  20240822023148_0  20240822033512_0  20240822043510_0  20240822054245_0  20240822065142_0  20240822075340_0  20240822085736_0  20240822100121_0  20240822110852_0  20240822140427_0  20240822151234_0  20240822161853_0  20240822172246_0  20240822182927_0  20240823012319_0  20240823022334_0  20240823032404_0  (+7 more)
Results/benchmarks/hashing/crypto_kem/kyber1024/m4fspeed/: 20240820235018_0  20240821011532_0  20240821022240_0  20240821032342_0  20240821042449_0  20240821052756_0  20240821063531_0  20240821073920_0  20240821084343_0  20240821094606_0  20240821105240_0  20240821120731_0  20240821132143_0  20240821143017_0  20240821153756_0  20240821164548_0  20240821180005_0  20240821194705_0  20240821205208_0  20240821215901_0  20240821230013_0  20240822000521_0  20240822010938_0  20240822021606_0  20240822032136_0  20240822042119_0  20240822052734_0  20240822063526_0  20240822073926_0  20240822084434_0  20240822094801_0  20240822105328_0  20240822120424_0  20240822134928_0  20240822145701_0  20240822160347_0  20240822170712_0  20240822181451_0  20240822191609_0  20240823010856_0  (+9 more)
Results/benchmarks/hashing/crypto_kem/kyber1024/m4fstack/: 20240820234957_0  20240821011512_0  20240821022220_0  20240821032325_0  20240821042429_0  20240821052736_0  20240821063512_0  20240821073901_0  20240821084327_0  20240821094546_0  20240821105216_0  20240821120709_0  20240821132115_0  20240821142957_0  20240821153735_0  20240821164527_0  20240821175944_0  20240821194646_0  (+31 more)
Sphincs/: CMakeLists.txt  main.c  randombytes.h
Sphincs/src/: randombytes.c
dilithium/main/: CMakeLists.txt  fips202.c  main  main.c  poly.c  randombytes.c  sign.c
(+2641 files in other folders)
