idf_component_register(SRCS "rng.c" "PQCgenKAT_sign.c" "main.c" "sign.c" "packing.c" "polyvec.c" "poly.c" "ntt.c" "reduce.c" "rounding.c" "symmetric-shake.c" "symmetric-aes.c" "fips202.c" "aes256ctr.c" "randombytes.c"
                    INCLUDE_DIRS "~/esp/esp-idf/components/esp_hw_support/include/" 
                    "~/esp/esp-idf/components/bootloader_support/include/")